# news_judge

./: .env.example  .gitignore  .prompt.py.swp  CONTRIBUTING.md  LICENSE  README.md  a.py  concept.js  concept.py  demo.py  main.py  prompt.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmark/: analysis.sh  crawler.py  example-output.json  get_host.sh  get_prompt.sh  json_parse.sh  main.sh  news_hosts.txt  news_source.txt  output.csv  post-download.py  send.sh  submit.sh  test.sh  urlencode.sh  xpath.py
benchmark/outputs/: output-A.csv  output-instance-A.csv  output-instance.csv  output.csv  stop-output-instance.csv  stop-output.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CRAWLER_GUIDE.md  PROMPT_ENGINEERING.md
prompts/: extractor_v1-1.json  extractor_v1-1_system.txt  extractor_v1-2.json  extractor_v1-2_system.txt  extractor_v1-2_user.txt  extractor_v1.json  extractor_v1_system.txt  inferencer_v1  inferencer_v2  inferencer_v3  inferencer_v4  inferencer_v5  inferencer_v6-1.txt  inferencer_v6.json  inferencer_v7.json  inferencer_v7_system.txt  inferencer_v7_user.txt  inferencer_v8-1.json  inferencer_v8-1_system.txt  inferencer_v8.json  inferencer_v8_system.txt  inferencer_v8_user.txt
prompts/test/: 1.extractor.out  1.inferencer_v1.in  1.inferencer_v2.in  1.inferencer_v3.in  1.inferencer_v3.out  1.inferencer_v4.in  1.inferencer_v4.out  1.inferencer_v5.in  1.inferencer_v6.in  1.inferencer_v7.out  1.inferencer_v7.out.2  1.inferencer_v8.out  2.inferencer_v5.in  2.inferencer_v5.out
samples/: crime_keywords.txt
samples/case1/: crime_keywords.txt  crime_keywords_1.txt  judge_keywords.txt  judge_keywords_1.txt  judge_keywords_2.txt  judge_keywords_3.txt  news_content.txt  news_title.txt  target_1.txt  target_2.txt  target_3.txt  target_4.txt  target_5.txt  target_6.txt
samples/case2/: news_content.txt  news_title.txt  target_1.txt  target_6.txt
samples/case3/: news_content.txt  news_title.txt  target_1.txt  target_2.txt  target_3.txt  target_4.txt  target_5.txt  target_6.txt
